MDEV-4233: Galera: assertion: (lock->trx)->wait_lock == lock fails in file lock0lock.c line 796

Analysis: Assertion means that InnoDB transaction lock queue is not
correctly set. Reason seams to be the fact that wrong lock is cancelled.

Fix: We have selected c_lock to be cancelled. Thus we should cancel
and release lock that is waiting for this lock i.e. c_lock->trx->wait_lock.